yaml/fancypants.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fancypants
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: fancypants
    spec:
      containers:
      - name: fancypants
        image: glennc/fancypants:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fancypants
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: fancypants
