yaml/mario-10-10-2020.yaml
apiVersion: v1
kind: Service
metadata:
annotations:
  service.beta.kubernetes.io/azure-load-balancer-resource-group: tempH36501rg
  name: marionew
spec:
  loadBalancerIP:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: marionew
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marionewdeployment
  labels:
    app: marionew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marionew
  template:
    metadata:
      labels:
        app: marionew
    spec:
      containers:
      - name: supermario
        image: pengbai/docker-supermario:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
